Notes/KubernetesAuthoritativeGuideBookNotes/CH06 Cluster Security/SE03 Admission Control/admission-control.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
......
webhooks:
- name: my-webhook.example.com
  rules:
  - operations: ["CREATE","UPDATE"]
    apiGroups: ["apps"]
    apiVersions: ["v1","v1beta1"]
    resources: ["deployments", "replicasets"]
    scope: "Namespaced"
